--- a/.github/workflows/check-plugin.yml
+++ b/.github/workflows/check-plugin.yml
@@ -16,15 +16,21 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: ${{ secrets.AWS_STAGING_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_STAGING_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
+      - name: Required Packages
+        run: |
+          sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys CC86BB64
+          sudo add-apt-repository ppa:rmescandon/yq
+          sudo apt update
+          sudo apt install yq -y
       - name: Checking Availability
         run: |
           #!/bin/bash
           set -e
-          .github/scripts/check_plugin.sh
-          echo ::set-env name=CHIME_MESSAGE::$(cat /tmp/chime_message.md)
+          $GITHUB_WORKSPACE/release-tools/check_plugin.sh
+          echo "CHIME_MESSAGE=$(cat /tmp/chime_message.md)" >> $GITHUB_ENV
           exit `cat /tmp/plugin_status.check`
 
       - name: Send Slack Message
