--- a/helm/opendistro-es/values.yaml
+++ b/helm/opendistro-es/values.yaml
@@ -372,7 +372,7 @@ elasticsearch:
     enabled: true
     ## Enables dedicated deployment for client/ingest. Otherwise master nodes as client/ingest
     dedicatedPod:
-      enalbled: true
+      enabled: true
     service:
       type: ClusterIP
       annotations: {}
